# gpu-scan

scan_bench/: script.py
scan_bench/cpu/: CMakeLists.txt  scan_cpu.cpp
scan_bench/gpu/: CMakeLists.txt
scan_bench/gpu/kernels/: contour.cl
scan_bench/gpu/spv/: contour.spv  crop.spv  grayscale.spv
scan_bench/gpu/src/: scan_gpu.cpp
shader_dev/countor/: CMakeLists.txt
shader_dev/countor/kernels/: contour.cl
shader_dev/countor/src/: contour.cpp
shader_dev/crop/: CMakeLists.txt
shader_dev/crop/kernels/: crop.cl  crop_naive.cl  crop_v2.cl
shader_dev/crop/src/: crop.cpp
shader_dev/grayscale/: CMakeLists.txt
shader_dev/grayscale/kernels/: grayscale.cl
shader_dev/grayscale/src/: grayscale.cpp
